# agent-tutor-api

./: .gitignore  README.md  pyproject.toml
config/: config.template.toml
src/agent_tutor_api/: __init__.py
src/app/agent/: cli.py  scripts.py
src/app/agent/assistant/: agent.py
src/app/agent/session/: config.py  handlers.py  manager.py
src/app/agent/worker/: entrypoint.py  prewarming.py
src/app/api/: exceptions.py  main.py  router_registry.py  run.py
src/app/api/dependencies/: main.py  providers.py
src/app/api/v1/: __init__.py
src/app/api/v1/rooms/: router.py  schemas.py
src/app/shared/: exceptions.py  logger.py
src/app/shared/config/: __init__.py  loader.py  main.py  providers.py
src/app/shared/services/livekit/: api_adapter.py  exceptions.py
