[project]
name = "agent-tutor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eduard Laskarzhevskyi", email = "eduard.laskarzhevskyi@nixs.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
agent-tutor-api = "agent_tutor_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
